<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_restaraunt"
            android:icon="@drawable/category_rest"
            android:title="@string/category_restaraunt" />
        <item
            android:id="@+id/nav_park"
            android:icon="@drawable/category_park"
            android:title="@string/category_park" />
        <item
            android:id="@+id/nav_museum"
            android:icon="@drawable/category_museum"
            android:title="@string/category_museum" />
        <item
            android:id="@+id/nav_site"
            android:icon="@drawable/category_site"
            android:title="@string/category_site" />
        <item
            android:id="@+id/nav_club"
            android:icon="@drawable/category_club"
            android:title="@string/category_club" />
    </group>
</menu> 
